[UNIREG-3307] Passé à la version 1.6 de java.
git-svn-id: https://svn.etat-de-vaud.ch/SVN_SOCLE/registre/unireg/trunk@54460 cb3efa0a-b8b0-9f43-a4c8-343d8b7e4362